tests/rspack-test/normalCases/errors/case-sensitive/test.filter.js
module.exports = () => require("os").platform() !== "linux";